First attempt at using ray tracing to improve rendering performance